# snake-game

./: .gitignore  CMakeLists.txt  Fruit.cpp  Fruit.h  Game.cpp  Game.h  Player.cpp  Player.h  README.md  main.cpp  web_build.sh
web_build/: CMakeCache.txt  game.js  game.wasm
